@@ -106,6 +106,8 @@ import de.tum.cit.aet.artemis.exercise.domain.InitializationState;
 import de.tum.cit.aet.artemis.exercise.domain.Submission;
 import de.tum.cit.aet.artemis.exercise.domain.participation.Participation;
 import de.tum.cit.aet.artemis.exercise.domain.participation.StudentParticipation;
+import de.tum.cit.aet.artemis.exercise.dto.StudentParticipationDTO;
+import de.tum.cit.aet.artemis.exercise.dto.SubmissionResponseDTO;
 import de.tum.cit.aet.artemis.exercise.participation.util.ParticipationFactory;
 import de.tum.cit.aet.artemis.exercise.participation.util.ParticipationUtilService;
 import de.tum.cit.aet.artemis.exercise.repository.SubmissionVersionRepository;
@@ -775,10 +777,19 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
         exam2 = examUtilService.addExam(course2, examVisibleDate, examStartDate, examEndDate);
         var exam = examUtilService.addTextModelingProgrammingExercisesToExam(exam2, false, false);
         var testRun = examUtilService.setupTestRunForExamWithExerciseGroupsForInstructor(exam, instructor, exam.getExerciseGroups());
-        List<Submission> response = request.getList("/api/exercise/exercises/" + testRun.getExercises().getFirst().getId() + "/test-run-submissions", HttpStatus.OK,
-                Submission.class);
+        JsonNode response = request.get("/api/exercise/exercises/" + testRun.getExercises().getFirst().getId() + "/test-run-submissions", HttpStatus.OK, JsonNode.class);
+        assertThat(response.isArray()).isTrue();
         assertThat(response).isNotEmpty();
-        assertThat((response.getFirst().getParticipation()).isTestRun()).isTrue();
+        JsonNode listed = response.get(0);
+        assertThat(listed.path("participation").path("testRun").asBoolean()).isTrue();
+        // Submission is polymorphic; the client switches on the discriminator, so it has to survive the DTO
+        assertThat(listed.path("submissionExerciseType").asString()).isNotBlank();
+        // the assessment link needs the participation id, and the client restores the participation subclass from its type
+        assertThat(listed.path("participation").path("id").isNumber()).isTrue();
+        assertThat(listed.path("participation").path("type").asString()).isEqualTo("student");
+        // the exam assessment dashboard picks the result of the displayed round by correctionRound and silently drops the row without it
+        assertThat(listed.path("results")).isNotEmpty().allSatisfy(result -> assertThat(result.path("correctionRound").isInt()).isTrue());
+        assertThat(listed.path("results")).anySatisfy(result -> assertThat(result.path("correctionRound").asInt()).isZero());
     }
 
     @Test
@@ -798,20 +809,34 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
         // deduplicated message) - the assessment draft must copy and expose it
         var testRunParticipation = studentParticipationRepository
                 .findTestRunParticipationsByStudentIdAndIndividualExercisesWithEagerSubmissionsResult(instructor.getId(), List.of(programmingExercise)).getFirst();
-        var submission = testRunParticipation.findLatestSubmission().orElseThrow();
+        var submission = (ProgrammingSubmission) testRunParticipation.findLatestSubmission().orElseThrow();
+        submission.setCommitHash("1234abcd");
+        submission = programmingSubmissionRepository.save(submission);
         var automaticResult = participationUtilService.addResultToSubmission(AssessmentType.AUTOMATIC, ZonedDateTime.now(), submission);
         var testCase = programmingExerciseUtilService.addTestCaseToProgrammingExercise(programmingExercise, "testRunTest");
         participationUtilService.addTestCaseFeedbackToResult(automaticResult, testCase, false, "test-run failure message");
 
-        List<Submission> response = request.getList("/api/exercise/exercises/" + programmingExercise.getId() + "/test-run-submissions", HttpStatus.OK, Submission.class);
+        JsonNode wire = request.get("/api/exercise/exercises/" + programmingExercise.getId() + "/test-run-submissions", HttpStatus.OK, JsonNode.class);
+        List<SubmissionResponseDTO> response = objectMapper.readerForListOf(SubmissionResponseDTO.class).readValue(wire);
 
         assertThat(response).hasSize(1);
-        var draft = response.getFirst().getResults().stream().filter(result -> result.getAssessmentType() == AssessmentType.SEMI_AUTOMATIC).findFirst().orElseThrow();
-        // the automatic feedback was copied into the draft as typed rows and is exposed as synthesized views
-        assertThat(draft.getFeedbacks()).anySatisfy(feedback -> {
-            assertThat(feedback.getId()).isNegative();
-            assertThat(feedback.getDetailText()).isEqualTo("test-run failure message");
+        // the result badge reads "x of y passed tests" off these two counters of the listed draft
+        assertThat(wire.get(0).path("results")).anySatisfy(result -> {
+            assertThat(result.path("assessmentType").asString()).isEqualTo(AssessmentType.SEMI_AUTOMATIC.name());
+            assertThat(result.path("testCaseCount").isInt()).isTrue();
+            assertThat(result.path("passedTestCaseCount").isInt()).isTrue();
         });
+        var draft = response.getFirst().results().stream().filter(result -> result.assessmentType() == AssessmentType.SEMI_AUTOMATIC).findFirst().orElseThrow();
+        // the automatic feedback was copied into the draft as typed rows and is exposed as synthesized views
+        assertThat(draft.feedbacks()).anySatisfy(feedback -> {
+            assertThat(feedback.id()).isNegative();
+            assertThat(feedback.detailText()).isEqualTo("test-run failure message");
+            // the synthesized view has no text: the test case is the only carrier of the name the popup prints
+            assertThat(feedback.testCase()).isNotNull();
+            assertThat(feedback.testCase().testName()).isEqualTo("testRunTest");
+        });
+        // the feedback popup of a programming result prints the commit the submission was built from
+        assertThat(response.getFirst().commitHash()).isEqualTo("1234abcd");
     }
 
     @Test
@@ -819,7 +844,7 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
     void testGetAllTestRunSubmissionsForExercise_notExamExercise() throws Exception {
         course2 = courseUtilService.addEnrolledEmptyCourse(TEST_PREFIX);
         var exercise = programmingExerciseUtilService.addProgrammingExerciseToCourse(course2, false);
-        request.getList("/api/exercise/exercises/" + exercise.getId() + "/test-run-submissions", HttpStatus.FORBIDDEN, Submission.class);
+        request.getList("/api/exercise/exercises/" + exercise.getId() + "/test-run-submissions", HttpStatus.FORBIDDEN, SubmissionResponseDTO.class);
     }
 
     @Test
@@ -834,7 +859,7 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
         var exam = examUtilService.addTextModelingProgrammingExercisesToExam(exam2, false, false);
         var testRun = examUtilService.setupTestRunForExamWithExerciseGroupsForInstructor(exam, instructor, exam.getExerciseGroups());
         userUtilService.changeUser(TEST_PREFIX + "student2");
-        request.getList("/api/exercise/exercises/" + testRun.getExercises().getFirst().getId() + "/test-run-submissions", HttpStatus.FORBIDDEN, Submission.class);
+        request.getList("/api/exercise/exercises/" + testRun.getExercises().getFirst().getId() + "/test-run-submissions", HttpStatus.FORBIDDEN, SubmissionResponseDTO.class);
     }
 
     @Test
@@ -848,7 +873,7 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
         var exam = examUtilService.addTextModelingProgrammingExercisesToExam(exam2, false, false);
         final var latestSubmissions = request.getList(
                 "/api/exercise/exercises/" + exam.getExerciseGroups().getFirst().getExercises().iterator().next().getId() + "/test-run-submissions", HttpStatus.OK,
-                Submission.class);
+                SubmissionResponseDTO.class);
         assertThat(latestSubmissions).isEmpty();
     }
 
@@ -2797,7 +2822,7 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
         return studentExam;
     }
 
-    private GradingScale createGradeScale(boolean isBonus) {
+    private GradingScale createGradeScale(boolean isBonus, Exam exam) {
         GradingScale gradingScale;
         if (isBonus) {
             gradingScale = gradingScaleUtilService.generateGradingScaleWithStickyStep(new double[] { 60, 40, 50 }, Optional.of(new String[] { "0", "0.3", "0.6" }), true, 1);
@@ -2807,6 +2832,8 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
             gradingScale = gradingScaleUtilService.generateGradingScaleWithStickyStep(new double[] { 60, 25, 15, 50 }, Optional.of(new String[] { "5.0", "3.0", "1.0", "1.0" }),
                     true, 1);
         }
+        // A grading scale grades a course or an exam, and the row has to name one of the two before it is written.
+        gradingScale.setExam(exam);
         gradingScaleRepository.save(gradingScale);
         return gradingScale;
     }
@@ -2816,8 +2843,7 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
     void testGradedStudentExamSummaryWithGradingScaleAsStudentAfterPublishResults() throws Exception {
         StudentExam studentExam = createStudentExamWithResultsAndAssessments(true, 1);
 
-        GradingScale gradingScale = createGradeScale(false);
-        gradingScale.setExam(exam2);
+        GradingScale gradingScale = createGradeScale(false, exam2);
         gradingScaleRepository.save(gradingScale);
 
         // users tries to access exam summary after results are published
@@ -2912,8 +2938,7 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
         exam2.setPublishResultsDate(ZonedDateTime.now().plusDays(1));
         exam2 = examRepository.save(exam2);
 
-        GradingScale gradingScale = createGradeScale(false);
-        gradingScale.setExam(exam2);
+        GradingScale gradingScale = createGradeScale(false, exam2);
         gradingScaleRepository.save(gradingScale);
 
         // users tries to access exam summary after results are published
@@ -2928,8 +2953,7 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
     void testGradedStudentExamSummaryWithGradingScaleAsStudentAfterPublishResultsWithOwnUserId() throws Exception {
         StudentExam studentExam = createStudentExamWithResultsAndAssessments(true, 1);
 
-        GradingScale gradingScale = createGradeScale(false);
-        gradingScale.setExam(exam2);
+        GradingScale gradingScale = createGradeScale(false, exam2);
         gradingScaleRepository.save(gradingScale);
 
         // users tries to access exam summary after results are published
@@ -2955,8 +2979,7 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
     void testGradedStudentExamSummaryWithGradingScaleAsStudentAfterPublishResultsWithOtherUserId() throws Exception {
         exam2 = createStudentExamWithResultsAndAssessments(true, 2).getExam();
 
-        GradingScale gradingScale = createGradeScale(false);
-        gradingScale.setExam(exam2);
+        GradingScale gradingScale = createGradeScale(false, exam2);
         gradingScaleRepository.save(gradingScale);
 
         // users try to access exam summary after results are published
@@ -2974,8 +2997,7 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
         StudentExam studentExam = createStudentExamWithResultsAndAssessments(true, 1);
         exam2 = studentExam.getExam();
 
-        GradingScale gradingScale = createGradeScale(false);
-        gradingScale.setExam(exam2);
+        GradingScale gradingScale = createGradeScale(false, exam2);
         gradingScaleRepository.save(gradingScale);
 
         var studentExamGradeInfoFromServer = request.get("/api/exam/courses/" + course2.getId() + "/exams/" + exam2.getId() + "/student-exams/" + studentExam.getId()
@@ -2996,8 +3018,7 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
     void testGradedStudentExamSummaryWithGradingScaleWithCorrectlyRoundedPoints() throws Exception {
         StudentExam studentExam = createStudentExamWithResultsAndAssessments(true, 1);
 
-        GradingScale gradingScale = createGradeScale(false);
-        gradingScale.setExam(exam2);
+        GradingScale gradingScale = createGradeScale(false, exam2);
         gradingScaleRepository.save(gradingScale);
         List<StudentParticipation> participations = studentParticipationRepository
                 .findByStudentIdAndIndividualExercisesWithEagerLatestSubmissionResultIgnoreTestRuns(studentExam.getUser().getId(), studentExam.getExercises());
@@ -3082,13 +3103,11 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
         var bonusExam = examRepository.findById(bonusStudentExam.getExam().getId()).orElseThrow();
         assertThat(finalExam.getId()).isNotEqualTo(bonusExam.getId());
 
-        GradingScale finalExamGradingScale = createGradeScale(false);
-        finalExamGradingScale.setExam(finalExam);
+        GradingScale finalExamGradingScale = createGradeScale(false, finalExam);
         finalExamGradingScale.setBonusStrategy(bonusStrategy);
         gradingScaleRepository.save(finalExamGradingScale);
 
-        GradingScale bonusGradingScale = createGradeScale(true);
-        bonusGradingScale.setExam(bonusExam);
+        GradingScale bonusGradingScale = createGradeScale(true, bonusExam);
         gradingScaleRepository.save(bonusGradingScale);
 
         double weight = bonusStrategy == BonusStrategy.POINTS ? 1.0 : -1.0;
@@ -3953,9 +3972,9 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
         // text autosave: result-exists probe, user with course roles, exercise, submission-gate projection, exam,
         // participations (twice, see below), scalar ownership check, participation state update, submission update,
         // plus the four statements of the submission-version write that only run on this thread under test
-        private final int TEXT_AUTOSAVE_QUERY_COUNT = 14;
+        private final int TEXT_AUTOSAVE_QUERY_COUNT = 15;
 
-        private final int MODELING_AUTOSAVE_QUERY_COUNT = 14;
+        private final int MODELING_AUTOSAVE_QUERY_COUNT = 15;
 
         // the quiz path additionally loads the quiz exercise with its question tree to re-resolve the submitted answers,
         // and its submission save stays a merge because it cascades to the submitted answers. It must NOT contain an
@@ -4053,8 +4072,8 @@ class StudentExamIntegrationTest extends AbstractSpringIntegrationJenkinsLocalVC
         void testStartParticipationQueryCount() throws Exception {
             // The exam participations were prepared up front, so this is the hot "participation already exists" path the
             // client hits on every (re)entry into an exercise.
-            assertThatDb(() -> request.postWithResponseBody("/api/exercise/exercises/" + textExercise.getId() + "/participations", null, Participation.class, HttpStatus.CREATED))
-                    .hasBeenCalledAtMostTimes(START_PARTICIPATION_QUERY_COUNT);
+            assertThatDb(() -> request.postWithResponseBody("/api/exercise/exercises/" + textExercise.getId() + "/participations", null, StudentParticipationDTO.class,
+                    HttpStatus.CREATED)).hasBeenCalledAtMostTimes(START_PARTICIPATION_QUERY_COUNT);
         }
 
         @Test
